fix(css): handle overflow

--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ body {
 
 #result {
   padding-bottom: 2em;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 #tier {
